--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-  <a href="http://firewall.gravesendgrammar.com" class="box ggs">GGS</a>
+  <a href="http://firewall.gravesendgrammar.com:4100" class="box ggs">GGS</a>
   <a href="http://firewall.whitehillprimary.com" class="box whp">WHP</a>
 </div>
 </body>
