--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <a href="http://firewall.gravesendgrammar.com:4100" class="box ggs">GGS</a>
-  <a href="http://firewall.whitehillprimary.com" class="box whp">WHP</a>
+  <a href="http://firewall.whitehillprimary.com:4100" class="box whp">WHP</a>
 </div>
 </body>
 </html>
